# xasm

./: Cargo.toml  LICENSE  README.md
examples/: README.md  a.out  bool.x  class.x  core.x  fail.x  for.x  function.x  if.x  list  list.x  map.x  module.x  parse.x  point.x  primitive.x  print.x  rand.x  some.x  while.x
examples/xasm_core/: Cargo.toml  main.go
examples/xasm_core/src/: lib.rs
examples/xasm_std/: Cargo.toml  main.go
examples/xasm_std/src/: lib.rs
src/: bin.rs  compile.rs  constants.rs  golang.rs  lib.rs  rust.rs
