[package]
name = "xasm"
version = "0.1.0"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "xasm"
path = "src/bin.rs"


[dependencies]
xassembler = "0.1.0"
clap = "2.33"
dirs = "2.0"