[package]
name = "xasm"
version = "0.1.1"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Compiler for the xasm programming language"
homepage = "https://github.com/adam-mcdaniel/xasm"
repository = "https://github.com/adam-mcdaniel/xasm"
documentation = "https://github.com/adam-mcdaniel/xasm"
readme = "README.md"

[[bin]]
name = "xasm"
path = "src/bin.rs"

[dependencies]
xassembler = "0.1.0"
clap = "2.33"
dirs = "2.0"