[package]
name = "xasm"
version = "0.5.1"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Compiler for the xasm programming language"
homepage = "https://github.com/adam-mcdaniel/xasm"
repository = "https://github.com/adam-mcdaniel/xasm"
documentation = "https://github.com/adam-mcdaniel/xasm"
readme = "README.md"

[[bin]]
name = "xasm"
path = "src/bin.rs"

[dependencies]
xassembler = "0.5.1"
clap = "2.33"
dirs = "2.0"
fs_extra = "1.1"
